<resources>
    <string name="app_name">WorldCinema</string>
    <string name="txtInputEmail">E-mail</string>
    <string name="txtInputPassword">Пароль</string>
    <string name="txtEnter">Войти</string>
    <string name="txtRegister">Регистрация</string>
    <string name="txtName">Имя</string>
    <string name="txtSurname">Фамилия</string>
    <string name="txtResetPassword">Повторите пароль</string>
    <string name="txtRegistrartion">Зарегистрироваться</string>
    <string name="txtNoRegistration">У меня уже есть аккаунт</string>
    <string name="Profile_Name">Воланд Иванов</string>
    <string name="Profile_Email">ivan@example.com</string>
    <string name="Profile_Edit">Изменить</string>
    <string name="Profile_Exit">Вывод</string>
    <string name="Profile_Discussion">Обсуждение</string>
    <string name="Profile_Story">История</string>
    <string name="Profile_Setting">Настройки</string>
    <string name="empty">Заглушка</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>