<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.AuthorizationScreen">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">
            <ImageView
                android:id="@+id/Profile_Img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo_voland" />
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Profile_Text_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_bold"
                    android:textColor="@color/white"
                    android:textSize="35dp" />
                <TextView
                    android:id="@+id/Profile_Text_Email"
                    android:fontFamily="@font/sf_pro_display_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Profile_Email"
                    android:textColor="@color/gray"
                    android:textSize="20dp"/>

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/Profile_Button_Edit"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_entity"
            android:ellipsize="end"
            android:layout_gravity="left"
            android:gravity="center"
            android:textColor="@color/orange"
            android:text="@string/Profile_Edit" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <RelativeLayout
            android:id="@+id/Profile_Button_Discussion"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/vector1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/sf_pro_display_bold"
                    android:text="@string/Profile_Discussion"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
            <ImageView
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Profile_Button_History"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/vector2" />
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/sf_pro_display_bold"
                    android:text="@string/Profile_Story"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
            <ImageView
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Profile_Button_Setting"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/vector3" />
                <TextView
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/sf_pro_display_bold"
                    android:text="@string/Profile_Setting"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
            <ImageView
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/arrow" />
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/Profile_Button_Exit"
            android:fontFamily="@font/sf_pro_display_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#9C9090"
            android:background="@drawable/border"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:textColorHighlight="#9C9090"
            android:textColor="@color/orange"
            app:boxStrokeColor="#9C9090"
            android:text="@string/Profile_Exit" />

    </LinearLayout>



</LinearLayout>

    <!-- style="@style/Widget.MaterialComponents.Button.OutlinedButton" -->